[package]
name = "qffunc"
version = "0.1.1"
edition = "2024"
description = "qf秘制小函数"
authors = ["dmqf dmqf12@gmail.com"]
license = "LGPL-2.1-only"
repository = "https://github.com/dmqf12/qffunc"

[dependencies]
anyhow = "1.0.102"
serde_json = "1.0.150"
lettre = { version = "0.11.22", default-features = false, features = ["tokio1-rustls", "ring", "webpki-roots", "builder", "smtp-transport"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
